Non-MTG Naval Rebalance

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,17 @@ tools/
 *.ZL9
 *.DS_Store
 Modding resources/AirCombatSimulator/
+/.vs/Millennium_Dawn/FileContentIndex
+.vs/Millennium_Dawn/v17/.wsuo
+.vs/Millennium_Dawn/v17/DocumentLayout.json
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/Millennium_Dawn/v17/.wsuo
+.vs/Millennium_Dawn/v17/DocumentLayout.json
+.vs/slnx.sqlite
+gfx/interface/technologies/USA/NAV/CA7.dds
+.vs/Millennium_Dawn/v17/.wsuo
+.vs/Millennium_Dawn/v17/DocumentLayout.json
+.vs/slnx.sqlite
+/.vs/Millennium_Dawn/v17/DocumentLayout.json
+/.vs/Millennium_Dawn/v17/.wsuo
