--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,10 @@ stages:
  - correctstyling
  - release
 
+# CodingStandards Section
 CodingStandards:
  stage: codingstandards
- image: python:3.11
+ image: xr09/python-requests
  interruptible: true
  rules:
   - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
@@ -40,53 +41,13 @@ CodingStandards:
   - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     when: always
  script:
-  - pip install requests
-  - python3 tools/check_basic_style_2.py $Bot_Token
-
-Styling:
- stage: styling
- image: python:3.11
- interruptible: true
- needs: ["CodingStandards"]
- rules:
-  - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
-    when: never
-  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-    when: always
- script:
-  - pip install requests
   - python3 tools/coding_standards.py $Bot_Token
-
-FixingStyling:
-  stage: correctstyling
-  image: python:3.11
-  interruptible: true
-  needs: ["Styling"]
-  rules:
-   - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
-     when: never
-   - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-     when: always
-  script:
-   - pip install requests
-   - python3 tools/fix_styling.py $Bot_Token
-  after_script:
-    - git config --global user.email "millenniumdawnmod@gmail.com"
-    - git config --global user.name "millennium_dawn_cwtools"
-    - git config --global push.default simple
-    - git remote set-url origin https://millennium_dawn_cwtools:$Bot_Token@gitlab.com/Millennium_Dawn/Millennium_Dawn.git
-    - git add -A
-    - git commit -m 'Fixed Styling for you'
-    - git push -u origin HEAD:$CI_COMMIT_REF_NAME
-    - python3 tools/check_basic_style.py $Bot_Token
-    - python3 tools/check_basic_style_2.py $Bot_Token
-  when: on_failure
 
 CWTools_CI:
  stage: codingstandards
  interruptible: true
  tags:
-   - cwtools
+  - cwtools
  rules:
   - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
     when: never
@@ -102,6 +63,43 @@ CWTools_CI:
   paths:
    - output.json
   when: always
+
+# Stylization Section
+Styling:
+ stage: styling
+ image: xr09/python-requests
+ interruptible: true
+ needs: ["CodingStandards", "CWTools_CI"]
+ rules:
+  - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
+    when: never
+  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    when: always
+ script:
+  - python3 tools/check_basic_style_2.py $Bot_Token
+
+FixingStyling:
+ stage: correctstyling
+ image: xr09/python-requests
+ interruptible: true
+ needs: ["Styling"]
+ rules:
+ - if: '$CI_MERGE_REQUEST_LABELS =~ /skip-coding-pipeline/'
+   when: never
+ - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+   when: on_failure
+ script:
+  - python3 tools/fix_styling.py $Bot_Token
+ after_script:
+  - git config --global user.email "millenniumdawnmod@gmail.com"
+  - git config --global user.name "millennium_dawn_cwtools"
+  - git config --global push.default simple
+  - git remote set-url origin https://millennium_dawn_cwtools:$Bot_Token@gitlab.com/Millennium_Dawn/Millennium_Dawn.git
+  - git add -A
+  - git commit -m 'Fixed Styling for you'
+  - git push -u origin HEAD:$CI_COMMIT_REF_NAME
+  - python3 tools/check_basic_style.py $Bot_Token
+  - python3 tools/check_basic_style_2.py $Bot_Token
 
 # This section is purely to create a releasable off the most recent commit on this tag. This should allow me to save some time in creating releasable assets.
 create_releaseable:
