--- a/Modding resources/Laven-PRC-Rework/MD_focus_CHI_l_english.yml
+++ b/Modding resources/Laven-PRC-Rework/MD_focus_CHI_l_english.yml
@@ -1190,14 +1190,6 @@ CHI_UF: "Chinese United Front"
  china.66.d: "Our friends in China have offered to draw closer in regards to let our landlocked country join a much bigger family, recover the glory and share the great China market. Sure, it would give up Mongolian independence, but that is but a small price to pay, right?"
  china.66.o1: "Now we are one!"
  china.66.o2: "Resist and bite!"
- 
- china.67.t: "The Outer Mongolian Special Administrative Region is Established"
- china.67.d: "Following a positive reaction in the Khalkha Region to recent liberalizations, the Mongolian leadership has decided to replace Outer Mongolia's \"Nation\" status with that of \"Special Administrative Region\". This change of status is accompanied by a large degree of reunification."
- china.67.a: "An unexpected turn of events."
- 
- china.68.t: "Mongolian resists us!"
- china.68.d: "Mongolia has had the audacity to resist China`s wishes for a reunification! We have to prepare an answer."
- china.68.o1: "We got plan B."
 
  #### SCRAPED ####
  #china.65.t: "Where To Dock?"
@@ -1213,7 +1205,20 @@ CHI_UF: "Chinese United Front"
  #china.66.b: "No Chinese hulls in our ports."
 
  #china.67.t: "Rejected"
+ #china.67.t: "The Outer Mongolian Special Administrative Region is Established"
+ #china.67.d: "Following a positive reaction in the Khalkha Region to recent liberalizations, the Mongolian leadership has decided to replace Outer Mongolia's \"Nation\" status with that of \"Special Administrative Region\". This change of status is accompanied by a large degree of reunification."
+ #china.67.a: "An unexpected turn of events."
+ 
+ #china.68.t: "Mongolian resists us!"
+ #china.68.d: "Mongolia has had the audacity to resist China`s wishes for a reunification! We have to prepare an answer."
+ #china.68.o1: "We got plan B."
  ###################
+ china.67.t: "Conceal real epidemiology data makes the Epidemic worse"
+ china.67.d: "The spread of SARS has worsened under layers of underreporting by officials at all levels. With the international community and the Chinese people questioning our data, we have to admit our failure to solve epidemic."
+ china.67.a: "One person can never beat the whole system, but thousands of people could."
+ china.68.t: "Publish real epidemiology data leads the international community to praise us"
+ china.68.d: "At today's press conference at the Health Ministry, we acknowledged our wrongdoing in withholding true data and failing to respond in a timely manner. And we announced that we have removed the former Minister of Health."
+ china.68.a: "A smart move."
 
  south_china_sea_clash.1.t: "China has won the confrontation in the Spratlys!"
  south_china_sea_clash.1.d: "Our gamble has paid off! We have now extended our control over the South China Sea and therefore have greater access to that waterway's multiple benefits. Our adversaries have retreated, but we should be cautious in case they decide to launch a counter-offensive."
